// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography renders correctly 1`] = `
<article
  class="kd-typography"
>
  Typography
</article>
`;

exports[`Typography renders correctly 2`] = `
<div
  class="kd-typography"
>
  Paragraph
</div>
`;

exports[`Typography renders correctly 3`] = `
<span
  class="kd-typography"
>
  Text
</span>
`;

exports[`Typography renders correctly 4`] = `
<h1
  class="kd-typography"
>
  Title
</h1>
`;

exports[`Typography renders correctly 5`] = `
<span
  class="kd-typography kd-typography-second"
>
  Typography.Text type
</span>
`;

exports[`Typography renders correctly 6`] = `
<span
  class="kd-typography kd-typography-success"
>
  Typography.Text type
</span>
`;

exports[`Typography renders correctly 7`] = `
<span
  class="kd-typography kd-typography-warning"
>
  Typography.Text type
</span>
`;

exports[`Typography renders correctly 8`] = `
<span
  class="kd-typography kd-typography-danger"
>
  Typography.Text type
</span>
`;

exports[`Typography renders correctly 9`] = `
<span
  class="kd-typography kd-typography-assist"
>
  Typography.Text type
</span>
`;

exports[`Typography renders correctly 10`] = `
<h1
  class="kd-typography"
>
  Typography.Title level
</h1>
`;

exports[`Typography renders correctly 11`] = `
<h2
  class="kd-typography"
>
  Typography.Title level
</h2>
`;

exports[`Typography renders correctly 12`] = `
<h3
  class="kd-typography"
>
  Typography.Title level
</h3>
`;
